feat/sample_plugins: add tests